--- a/my-app/src/Component/mainRank.module.css
+++ b/my-app/src/Component/mainRank.module.css
@@ -25,6 +25,8 @@
     .HotToon{
         width: 80% !important;
         min-height: 100px;
+        margin-right: 90px !important;
+
     }
     .RBox{
         float: left !important;
@@ -53,10 +55,11 @@
 
 @media screen and (max-width:361px) and (min-width:10px){
     .HHH{
+        width: 97%;
+        padding-left: 3%;
         margin-top: 15px;
         font-size: 16px !important;
-        margin-left: 15px;
-    }
+        }
     .RankImg img{
         height: 220px !important;
     }
@@ -105,12 +108,15 @@
 
 }
 .mrbox{
+    background-color: white;
     width: 100%;
     max-width: 1920px;
     float: left;
 }
 
 .HotToon {
+    background-color: white;
+
     display: flex;
     flex-wrap: wrap; /* 줄바꿈 설정 */
     justify-content: space-between; /* 요소들을 가로로 고르게 배치 */
@@ -118,10 +124,18 @@
 
 .HHH{
     font-size: 22px;
+    background-color: white;
+
     float: left;
     margin-bottom: 20px;
 }
+@media (prefers-color-scheme: dark) {
+    .RBox{
+        margin-left: 0.3% !important;
+    }
+}
 .RBox{
+    background-color: white;
 
     width: calc(30%);
     /* border: 1px solid rgb(171,230,157); */
@@ -150,6 +164,8 @@
 .rc p{
     float: left;
     font-size: 15px;
+    background-color: white;
+
     margin-top: 20px;
     height: 60px;
     padding-bottom: 10px;
@@ -161,6 +177,8 @@
 
 
 .RankAT{
+    background-color: white;
+
     color:gray;
 }
 
@@ -169,9 +187,12 @@
 /* mainRank.module.css 파일 */
 
 .webtoonImage {
+    
     transition: transform 0.3s; /* 애니메이션 효과를 위한 속성 추가 */
   }
-  
+  .RankWN{
+    background-color: white;
+  }
   .webtoonImage:hover {
     transform: scale(1.1); /* 이미지를 확대하는 애니메이션 */
   }
@@ -185,6 +206,8 @@
     /* width: 40%; */
     margin-top: 12px;
     width: 60%;
+    background-color: white;
+
     margin-bottom: 10px;
 }
   .rankNum{
@@ -195,6 +218,8 @@
     font-size: 32px;
   }
   .rankNum{
+    background-color: white;
+
   }
 
   .FirstRank{
