--- a/my-app/src/Footer/styles/FooterCss.module.css
+++ b/my-app/src/Footer/styles/FooterCss.module.css
@@ -12,15 +12,20 @@
     border-top: 1px solid rgb(230, 226, 226);
     width: 100%;
     float: left;
+    background-color: white;
+
     height: 60px;
-    margin-top: 1vw;
 }
 .footer .FL{
     margin: 0 auto;
     float: left;
     height: 3vw;
+    background-color: white;
+
 }
 .footer li{
+    background-color: white;
+
     text-align: center;
     margin-top: 5px;
     color:rgb(218, 213, 213);
@@ -35,6 +40,8 @@
     -webkit-transform:scale(0.8);
 }
 .FL p{
+    background-color: white;
+
     float: left;
     font-size: 10px;
     -webkit-transform:scale(0.8);
