--- a/my-app/src/pages/adminpage/style/adminpageCss.module.css
+++ b/my-app/src/pages/adminpage/style/adminpageCss.module.css
@@ -14,6 +14,13 @@
         top: 50% !important; /* 수정된 위치 값 */
         transform: translateY(-50%); /* 추가된 값 */
     }
+    .show{
+        width: 230px !important;
+        height: 300px !important;
+    }
+    .hoverP{
+        width: 230px !important;
+    }
     .inputP{
         font-size: 18px !important;
         width: 17% !important;
@@ -29,6 +36,13 @@
 @media screen and (max-width: 361px) and (min-width: 10px) {
     .accessDenied{
         width: 50px !important;
+    }
+    .show{
+        width: 230px !important;
+        height: 300px !important;
+    }
+    .hoverP{
+        width: 230px !important;
     }
     .adminpage{
         width: 100% !important;
@@ -188,7 +202,7 @@
 .hoverP{
     float: left;
     position: absolute;
-    width: 300px;
+    width: 290px;
     color:white;
 
     height: 30px;
@@ -208,11 +222,14 @@
     width: auto;
 }
 .show{
+    margin-top: 20px;
     background-color: gray;
-    width: 300px;
+    width: 290px;
     height: 380px;
     float: left;
 }
 .show img{
-    height: 380px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
