슬라이더 어색한거 처리

--- a/my-app/src/Component/Carousel.module.css
+++ b/my-app/src/Component/Carousel.module.css
@@ -80,6 +80,7 @@
     margin-top: 5px;
 
     padding: 10px;
+    padding-right: 11px ;
     background-color: white;
     border-radius: 10px;
     box-shadow:1px 1px ;
