--- a/my-app/src/Header/styles/Heder.module.css
+++ b/my-app/src/Header/styles/Heder.module.css
@@ -71,7 +71,16 @@
 /* test */
 
   
-  
+@media screen and (max-width:460px) and (min-width:362px) {
+    .header{
+    }
+    .SerchBar{
+        margin-right: 35% !important;
+    }
+    .AD{
+        width: 15% !important;
+    }
+}
   
 /* teset */
 @media screen and (max-width:361px) and (min-width:10px) {
