--- a/my-app/src/Component/Tag/styles/TagCss.module.css
+++ b/my-app/src/Component/Tag/styles/TagCss.module.css
@@ -5,6 +5,9 @@
     max-width: 1920px;
     width: 100%;
 }
+.tagItem{
+    background-color: white;
+}
 .tag .tagItem li{
     background-color: white  ;
 
