--- a/my-app/src/styles/MainPageCss.module.css
+++ b/my-app/src/styles/MainPageCss.module.css
@@ -40,8 +40,9 @@
         width: 59.5% !important;
     }
 
+
 }
-@media screen and (max-width:1740px) and (min-width:1201px) {
+@media screen and (max-width:1740px) and (min-width:1199px) {
     .leftWn{
         width: auto !important;
         font-size: 14px;
@@ -63,6 +64,12 @@
     }
     .likee{
         display: none;
+    }
+
+    .AllToonInfo {
+        margin-left: 3% !important;
+        width: calc(20% - 0px) !important; /* 각 요소의 너비를 33.3%로 설정 (여백 10px 제외) */
+        margin-bottom: 10px !important; /* 요소들 사이의 간격 설정 */
     }
 }
 
