--- a/my-app/src/pages/adminpage/style/adminpageCss.module.css
+++ b/my-app/src/pages/adminpage/style/adminpageCss.module.css
@@ -1,7 +1,11 @@
 /* adminpageCss.module.css */
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 
-@media screen and (max-width: 721px) and (min-width: 362px) {
+@media screen and (max-width: 721px) and (min-width: 416px) {
+    .Nav ul li{
+         margin-top: 10px !important;
+
+    }
     .adminpage {
         overflow: hidden;
         width: 100% !important;
@@ -33,9 +37,17 @@
         width:12% !important;
     }
 }
-@media screen and (max-width: 361px) and (min-width: 10px) {
+@media screen and (max-width: 415px) and (min-width: 10px) {
     .accessDenied{
         width: 50px !important;
+    }
+    .Nav ul li{
+        margin-top: 20px !important;
+
+   }
+    .Nav{
+        margin-top: 20px !important;
+        margin-bottom:60px !important;
     }
     .show{
         width: 230px !important;
@@ -168,6 +180,7 @@
   
 #newEpH{
     margin-top: 30px;
+    float: left;
 }
 
 
@@ -237,15 +250,33 @@
 .Nav{
     margin-top:45px;
     width: 80%;
+    margin-bottom: 90px;
 }
 
 .Nav ul li{
     float: left;
     position: relative;
     right: 40px;
-    width: 10%;
+    margin-bottom: 15px;
+    width: auto ;
+    margin-right: 5%;
     list-style: none;
 }
 .Nav ul{
     float: left;
+}
+
+.choise{
+    color:rgb(171,230,157);
+}
+.top{
+    margin-top: 20px;
+}
+
+.selected{
+    background-color: rgb(171,230,157);
+    color: white;
+}
+#dT{
+    width: 80%;
 }
