Revert "Merge branch 'solbin'"
This reverts commit e910c1664f4d2725f08ffa2d1e7fd8ffa33c839b, reversing
changes made to fcda270231507740273917ffeceed952a8a53a66.

--- a/my-app/src/Header/styles/Heder.module.css
+++ b/my-app/src/Header/styles/Heder.module.css
@@ -72,13 +72,12 @@
 
   
 @media screen and (max-width:480px) and (min-width:401px) {
-
-    .LoginBtn{      
-        margin-top: 2px;  
-        width: auto !important;
+    .header{
+    }
+    .LoginBtn{
+        width: 15% !important;
     }
     .SerchBar{
-        width: 100% !important;
         margin-right: 15% !important;
     }
     .AD{
