--- a/my-app/src/pages/adminpage/style/addEpList.module.css
+++ b/my-app/src/pages/adminpage/style/addEpList.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+
 @media screen and (max-width:721px) and (min-width:416px) {
     .border{
         font-size: 13px !important;
@@ -9,6 +11,8 @@
     }    
 }
 .addEpList{
+    font-family: 'Jua', sans-serif;
+
     width: 100% !important;
 }
 .newWebtoon{
